# jaxstuff

./: .gitignore  README.md  Untitled.ipynb  blackjax.md  cox-process.ipynb  diffusion.ipynb  gp.ipynb  hierarchical.ipynb  jax.md  linear-reg.ipynb  logisic-reg.ipynb  logistic-reg.ipynb  notes.md  pyproject.toml  unet.ipynb  vitransformer.ipynb
src/jaxstuff/: __init__.py  features.py  inference.py  logistic.py  types.py
tests/: features.py  logistic.py
