[project]
name = "jaxstuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Francesco Terenzi", email = "fra.terenz1993@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.23.1",
    "blackjax>=1.3",
    "jax>=0.8.2",
    "jaxtyping>=0.3.5",
    "numpy>=2.4.1",
    "optax>=0.2.7",
    "scikit-learn>=1.8.0",
    "tinygp>=0.3.0",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
